# XJ1Core

./: .gitignore  API_404_FIX.md  LICENSE  README.md  XJ1 Core 新手上路指南.md  XJ1-Core.xmind  test_esp32_api.py  配置虚拟环境.txt
xj1core/: CMakeLists.txt  README.md  TROUBLESHOOTING.md  WEB_DASHBOARD_UPDATE.md  config.ini  partitions.csv  sdkconfig  sdkconfig.defaults
xj1core/components/ini_parser/: CMakeLists.txt  ini_parser.c
xj1core/components/ini_parser/include/: ini_parser.h
xj1core/main/: CMakeLists.txt  auth.c  auth.h  bluetooth_manager.c  bluetooth_manager.h  config_manager.c  config_manager.h  ethernet_manager.c  ethernet_manager.h  main.c  mqtt_manager.c  mqtt_manager.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
xj1core/web/: index.html  login.html
xj1corecloud/: QUICKSTART.md  README.md  README_WEB.md  config.ini  config_manager.py  mosquitto.conf  requirements.txt  start.py  start.sh  start_mqtt.sh  start_mqtt_192.168.1.40.sh  start_mqtt_ap_network.sh  start_web.py  start_web.sh  test_esp32_http_api.py  test_http_api.html  test_mqtt_connection.py  web_app.py  xj1cloud.py
xj1corecloud/static/css/: style.css
xj1corecloud/static/js/: app.js
xj1corecloud/templates/: index.html
